# sdl-prototype

./: README.md  pyproject.toml
descriptions/: ais_description.ttl  foursquare_description.ttl  polymarket_description.ttl
docs/: vocabulary-evolution.md  vocabulary-review.md
manifest/: __init__.py  cli.py  engine.py  graph.py  model.py  registry.py
manifest/validators/: __init__.py  aggregation.py  ordering.py  schema.py  values.py
sdl/: cli.py  graph.py  model.py
sdl/validators/: schema.py
vocabularies/: mnf_core.ttl  sdl_core.ttl
