[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manifest-toolkit"
version = "0.1.0"
description = "Manifest — describe, validate, and integrate data with formal semantics"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.0",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest", "h3"]

[project.scripts]
mnf = "manifest.cli:main"

[tool.setuptools.packages.find]
include = ["manifest*"]

[tool.setuptools.package-data]
manifest = ["py.typed"]
